fix: gift price not a number; right align the price;

--- a/src/component/gift/gift.component.styl
+++ b/src/component/gift/gift.component.styl
@@ -11,6 +11,9 @@
 .total {
   font-size: 3em;
   width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: baseline;
 }
 
 .list {
